--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mapbox-gl": "^0.34.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-mapbox-gl": "^1.4.1"
+    "react-mapbox-gl": "^1.5.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
