--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prop-types": "^15.5.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-mapbox-gl": "^1.8.0"
+    "react-mapbox-gl": "^1.9.0",
+    "reduce-object": "^0.1.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
