--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mapbox-gl": "^0.36.0",
-    "prop-types": "^15.5.6",
+    "mapbox-gl": "^0.37.0",
+    "prop-types": "^15.5.9",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-mapbox-gl": "^1.9.0",
-    "reduce-object": "^0.1.3"
+    "react-mapbox-gl": "^1.10.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
